tests/NormalTests/paczka1/small_fuzzy/71029392.err
Error in line 1: IfVtc9lbU A176 43,2
Error in line 3: IfVtc9lbU A980 48,7
Error in line 5: 7ubnJgqJ A980 39,0
Error in line 2: SGrwbMpJk A360 93,6
Error in line 6: PLK87chIF4x S960 20,2
Error in line 9: SGrwbMpJk A176 88,2
